# Web-Scrapping-project

./: project.ipynb  pyproject.toml  test.ipynb  testgab.ipynb
web_project_pt1/: preprocessing.py
