[project]
name = "web-scrapping-project"
version = "0.1.0"
description = ""
authors = [
    {name = "GabrielCarlotti",email = "148062188+GabrielCarlotti@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    
    "ipykernel (>=6.29.5,<7.0.0)",
    "pip (>=25.0.1,<26.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "sklearn-crfsuite (>=0.5.0,<0.6.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "spacy (>=3.8.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
