[project]
name = "web-scrapping-project"
version = "0.1.0"
description = ""
authors = [
    {name = "GabrielCarlotti",email = "148062188+GabrielCarlotti@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    
    "ipykernel (>=6.29.5,<7.0.0)",
    "pip (>=25.0.1,<26.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "sklearn-crfsuite (>=0.5.0,<0.6.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "rdflib (>=7.1.3,<8.0.0)",
    "pykeen (>=1.11.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
